[tool.poetry]
name = "dvdownloader"
version = "0.1.0"
description = "The DVDownloader downloads files from a Dataverse dataset."
authors = ["Stefan Harfst <stefan.harfst@uol.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
typer = "^0.12.3"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
dotted-dict = "^1.1.3"

[tool.poetry.scripts]
dvdownloader = "dvdownloader.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
